// State of a tile.
syntax = "proto3";

package androidx.wear.protolayout.expression.proto;

import "fixed.proto";

option java_package = "androidx.wear.protolayout.expression.proto";
option java_outer_classname = "StateEntryProto";

// A state entry value.
message StateEntryValue {
  oneof inner {
    FixedString string_val = 1;
    FixedInt32 int32_val = 2;
    FixedFloat float_val = 3;
    FixedBool bool_val = 4;
    FixedColor color_val = 5;
  }
}
